--- a/usr/share/aat/Translations/RU.xml
+++ b/usr/share/aat/Translations/RU.xml
@@ -309,6 +309,7 @@
   <msg mid="_START_TIME" value="Время пуска" />
 	<msg mid="_STATE" value="_STATE" />
   <msg mid="_STATIC" value="Статический" />
+  <msg mid="_STATISTICS" value="_STATISTIC" />
   <msg mid="_STATISTIC_REPORTS" value="Статистические отчёты" />
   <msg mid="_STORAGES" value="Хранилища" />
   <msg mid="_STREET" value="Улица" />
